--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,6 @@ p {
     .card{
         width: 80%;
         margin: 40px auto;
-        border: 5px solid rgb(236, 236, 27);
-        box-shadow: 5px 10px rgb(139, 139, 0);
+        border: 5px solid gray;
+        box-shadow: 5px 10px #888888;
 }
