--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
+    background-color: rgb(95, 0, 0);
     color: white;
 }
 h1,
@@ -32,6 +32,6 @@ p {
     .card{
         width: 80%;
         margin: 40px auto;
-        border: 5px solid gray;
+        border: 5px solid rgb(189, 75, 0);
         box-shadow: 5px 10px #888888;
 }
